create swagger treatment and users
