# docs/swagger.yaml
@@ -1,3 +1,14 @@
+definitions:
+  input.UserInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
 host: backend-annisa-production.up.railway.app
 info:
   contact: {}
@@ -5,99 +16,6 @@ info:
   title: Sweager Service API
 paths:
   /api/blog:
-    post:
-      consumes:
-      - application/json
-      description: Create New blog
-      parameters:
-      - description: File gambar
-        in: formData
-        name: File
-        required: true
-        type: file
-      - description: Title
-        in: formData
-        name: Title
-        required: true
-        type: string
-      - description: Description
-        in: formData
-        name: Description
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "422":
-          description: Unprocessable Entity
-          schema:
-            additionalProperties: true
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Create New blog
-      tags:
-      - blog
-  /api/blog/{slug}:
-    put:
-      consumes:
-      - application/json
-      description: Update blog by slug
-      parameters:
-      - description: slug blog
-        in: path
-        name: slug
-        required: true
-        type: string
-      - description: File gambar
-        in: formData
-        name: File
-        required: true
-        type: file
-      - description: Title
-        in: formData
-        name: Title
-        required: true
-        type: string
-      - description: Description
-        in: formData
-        name: Description
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "422":
-          description: Unprocessable Entity
-          schema:
-            additionalProperties: true
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Update blog by slug
-      tags:
-      - blog
-  /api/blogs:
     get:
       consumes:
       - application/json
@@ -131,8 +49,51 @@ paths:
             type: object
       summary: Get all blogs
       tags:
-      - Blogs
-  /api/blogs/{slug}:
+      - Blog
+    post:
+      consumes:
+      - application/json
+      description: Create New blog
+      parameters:
+      - description: File gambar
+        in: formData
+        name: file
+        required: true
+        type: file
+      - description: Title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: Description
+        in: formData
+        name: description
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create New blog
+      tags:
+      - blog
+  /api/blog/{slug}:
     delete:
       consumes:
       - application/json
@@ -165,7 +126,7 @@ paths:
       - BearerAuth: []
       summary: Delete a blog by slug
       tags:
-      - Blogs
+      - Blog
     get:
       consumes:
       - application/json
@@ -196,7 +157,309 @@ paths:
             type: object
       summary: Get a single blog by slug
       tags:
-      - Blogs
+      - Blog
+    put:
+      consumes:
+      - application/json
+      description: Update blog by slug
+      parameters:
+      - description: slug blog
+        in: path
+        name: slug
+        required: true
+        type: string
+      - description: File gambar
+        in: formData
+        name: file
+        required: true
+        type: file
+      - description: Title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: Description
+        in: formData
+        name: description
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update blog by slug
+      tags:
+      - blog
+  /api/treatment:
+    get:
+      consumes:
+      - application/json
+      description: Get All treatment
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get All treatment
+      tags:
+      - treatment
+    post:
+      consumes:
+      - application/json
+      description: Create New treatment
+      parameters:
+      - description: TreatmentName
+        in: formData
+        name: treatment_name
+        required: true
+        type: string
+      - description: Price
+        in: formData
+        name: price
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create New treatment
+      tags:
+      - Treatment
+  /api/treatment/{slug}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a treatment by its slug
+      parameters:
+      - description: Slug of the treatment to be deleted
+        in: path
+        name: slug
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete a treatment by slug
+      tags:
+      - treatment
+    put:
+      consumes:
+      - application/json
+      description: Update treatment by slug
+      parameters:
+      - description: slug treatment
+        in: path
+        name: slug
+        required: true
+        type: string
+      - description: TreatmentName
+        in: formData
+        name: treatment_name
+        required: true
+        type: string
+      - description: Price
+        in: formData
+        name: price
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update treatment by slug
+      tags:
+      - Treatment
+  /api/treatments/{slug}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a single treatment using its slug
+      parameters:
+      - description: Slug of the treatment
+        in: path
+        name: slug
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get a single treatment by slug
+      tags:
+      - treatment
+  /api/user/login:
+    post:
+      consumes:
+      - application/json
+      description: Log in an existing user using email and password
+      parameters:
+      - description: User login details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/input.UserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: User login
+      tags:
+      - Users
+  /api/user/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a new user with the provided information
+      parameters:
+      - description: User registration details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/input.UserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Register new user
+      tags:
+      - Users
 securityDefinitions:
   BearerAuth:
     in: header
